- Prebacili dowload u pozadinsku nit; - Dodali progressBar; - Dodali opciju izabiranja mjesta čuvanja datoteke;

--- a/src/minidowloader/NasProzor.form
+++ b/src/minidowloader/NasProzor.form
@@ -32,6 +32,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="urlTextField" min="-2" pref="248" max="-2" attributes="0"/>
                   </Group>
+                  <Component id="pbDownload" max="32767" attributes="0"/>
               </Group>
               <EmptySpace pref="75" max="32767" attributes="0"/>
           </Group>
@@ -47,7 +48,9 @@
               </Group>
               <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
               <Component id="downloadBtn" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="166" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
+              <Component id="pbDownload" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="94" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -70,6 +73,11 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="downloadBtnActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JProgressBar" name="pbDownload">
+      <Properties>
+        <Property name="stringPainted" type="boolean" value="true"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
